# passwd-manager

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  block.cpp  block.h  block_unittest.cpp  blockchain.cpp  blockchain.h  blockchainBase.h  build_all.sh  bytes.cpp  bytes.h  bytes_unittest.cpp  install.sh  sha256.cpp  sha256.h  uninstall.sh
.github/ISSUE_TEMPLATE/: bug.md  nice-to-have.md  testing.md
.github/workflows/: clang_format.yml  clang_format_check.yml  clang_formatter.yml  cmake.yml  codeql.yml  format.yml  format_check.yml  msvc.yml
benchmarks/: CMakeLists.txt  bench.cpp  bench_utils.h  blockchain_bench.cpp  bytes_bench.cpp  chainhash_bench.cpp  dataheader_bench.cpp  main_bench.cpp  opt_bytes_bench.cpp  rng_bench.cpp
docs/: api.md  appdata.md  bytes.md  chainhash_modes.md  dataheader.md  doc.md  encryption.md  file_data.md  hash_modes.md  modes.md  password_data.md
docs/uml/: api.uxf
include/: api.h  app.h  base.h  block.h  block_decrypt.h  block_encrypt.h  block_opt.h  block_opt_decrypt.h  block_opt_encrypt.h  blockchain.h  blockchainBase.h  blockchain_decrypt.h  blockchain_encrypt.h  blockchain_stream.h  blockchain_stream_decrypt.h  blockchain_stream_encrypt.h  bytes.h  bytes_opt.h  chainhash_data.cpp  chainhash_data.h  chainhash_modes.h  cli.h  cuda_test.h  dataHeader.h  dataheader.h  error.h  file_data.h  file_modes.h  filehandler.h  format.h  hash.h  hash_modes.h  logger.h  modes.cpp  modes.h  password_data.h  pwfunc.h  rng.h  salt_iter.h  settings.h  (+5 more)
src/: CMakeLists.txt  api.cpp  app.cpp  block.cpp  block_decrypt.cpp  block_encrypt.cpp  block_opt.cpp  block_opt_decrypt.cpp  block_opt_encrypt.cpp  blockchain.cpp  blockchain_decrypt.cpp  blockchain_encrypt.cpp  blockchain_stream.cpp  blockchain_stream_decrypt.cpp  blockchain_stream_encrypt.cpp  bytes.cpp  bytes_opt.cpp  chainhash_data.cpp  chainhash_modes.cpp  cli.cpp  cuda_test.cu  dataHeader.cpp  dataheader.cpp  error.cpp  file_modes.cpp  filehandler.cpp  format.cpp  hash.cpp  hash_modes.cpp  main.cpp  main_cuda.cpp  modes.cpp  password_data.cpp  pwfunc.cpp  rng.cpp  sha256.cpp  sha384.cpp  sha512.cpp  timer.cpp  utility.cpp
tests/: CMakeLists.txt  block_opt_unittest.cpp  block_unittest.cpp  bytes_opt_unittest.cpp  bytes_unittest.cpp  chainhashdata_unittest.cpp  dataheader_generator.h  dataheader_unittest.cpp  filehandler_unittest.cpp  format_unittest.cpp  main_test.cpp  pwfunc_unittest.cpp  rng_unittest.cpp  sha256_unittest.cpp  sha384_unittest.cpp  sha512_unittest.cpp  test_settings.cpp  test_utils.cpp  timer_unittest.cpp  utility_unittest.cpp
tests/Attacker/: attacker_unittest.cpp  base_attacker.cpp  base_attacker.h  brute_pw_attacker.cpp
tests/helpers/: hexToString.py
tests/include/: test_utils.h
